# tiny

./: CMakeLists.txt  GRAMMAR.md  README.md
generated-src/: TinyLexState.h  TinyLexicalException.h  TinyNonterminalNode.h  TinyParseException.h  TinyParser.cpp  TinyParser.h  TinyProductionType.h  TinyScanner.cpp  TinyScanner.h  TinySyntaxNode.h  TinySyntaxNodeVisitor.cpp  TinySyntaxNodeVisitor.h  TinyTerminalNode.h  TinyToken.h  TinyTokenScanner.h  TinyTokenType.h
src/ast/: Decl.h  Expr.h  Stmt.h  TinyAst.cpp  TinyAstNode.h  TinyAstVisitor.h  Type.h
src/builder/: TinyNodeBuilder.cpp  TinyNodeBuilder.h
src/codegen/: CodeGen.cpp  CodeGen.h  TargetContext.cpp  TargetContext.h
src/linker/: ImportEntry.h  LinkedImage.h  Linker.cpp  Linker.h
src/loader/: Loader.cpp  Loader.h
src/main/: tiny.cpp
src/optimize/: AddZeroEliminationPass.cpp  AddZeroEliminationPass.h  Optimizer.cpp  Optimizer.h
src/sema/: FunctionSignature.h  Sema.cpp  Sema.h
tests/: addzero.tiny  arith.tiny  array.tiny  fib.tiny  logic.tiny  loop.tiny  pass.tiny  var.tiny
